# stream-to-agora

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: release.yml
cpp/: agora_shim.cpp  agora_shim.h
native/include/: agora_shim.h
native/src/: agora_shim.cpp
npm/: README.md  install.js  package.json
scripts/: install.sh  regen-fixtures.sh  release.sh  test-e2e.sh
src/: main.rs
src/agora/: audio.rs  error.rs  mod.rs  observer.rs  publisher.rs  session.rs  shim.rs  sys.rs  video.rs
src/ffmpeg/: mod.rs  pipeline.rs  probe.rs
src/parse/: aac.rs  g711.rs  h264.rs  hevc.rs  ivf.rs  mod.rs  opus.rs  pcm.rs  yuv.rs
tests/fixtures/: README.md  h264-g711u-5s.mkv  probe-h264-aac.json  probe-hevc-opus.json  probe-mpeg2-mp3.json  probe-vp9-opus.json  vp8-opus-5s.webm  vp9-opus-5s.webm
