[package]
name = "stream-to-agora"
version = "0.1.0"
edition = "2024"
description = "Stream local files (and later https/rtmp/rtsp) to an Agora RTC channel"
license = "MIT"

[[bin]]
name = "stream-to-agora"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
cc = "1.0"
