[package]
name = "stream-to-agora"
version = "0.1.0"
edition = "2024"
description = "Stream local files (and later https/rtmp/rtsp) to an Agora RTC channel"
license = "MIT"

[[bin]]
name = "stream-to-agora"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ctrlc = "3.5.2"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1"
